--- a/src/main/resources/templates/dept.html
+++ b/src/main/resources/templates/dept.html
@@ -164,7 +164,7 @@
                     , {field: 'createTime', title: '创建时间', width: 200, sort: true}
                     , {field: 'updateBy', title: '修改人', width: 100}
                     , {field: 'updateTime', title: '修改时间', width: 200, sort: true}
-                    , {fixed: 'right', title: '操作', toolbar: '#deptBar', width: 120}
+                    , {fixed: 'right', align: 'center', title: '操作', toolbar: '#deptBar', width: 120}
                 ]
             ]
         });
