--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -211,7 +211,7 @@
                     {field: 'perms', title: '权限标识'},
                     {field: 'remark', title: '备注'},
                     {field: 'createTime', title: '创建时间'},
-                    {field: 'right', toolbar: '#menuBar', title: '操作', width: 120}
+                    {fixed: 'right', align: 'center', toolbar: '#menuBar', title: '操作', width: 120}
                 ]
             ]
         });
