--- a/src/main/resources/templates/custom.html
+++ b/src/main/resources/templates/custom.html
@@ -121,7 +121,7 @@
     <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
 </script>
 <!--查询表单-->
-<form class="layui-form" action="" style="margin-top: 10px" th:align="center">
+<form class="layui-form" action="" style="margin-top: 10px">
     <div class="layui-inline">
         <label class="layui-form-label">客户编号</label>
         <div class="layui-input-inline">
