--- a/src/main/resources/templates/custom.html
+++ b/src/main/resources/templates/custom.html
@@ -61,7 +61,8 @@
     </div>
 </form>
 <!--修改表单-->
-<form class="layui-form" action="" id="updateCustomForm" lay-filter="updateCustomFormFilter" style="display: none;margin-right: 40px;margin-top: 20px">
+<form class="layui-form" action="" id="updateCustomForm" lay-filter="updateCustomFormFilter"
+      style="display: none;margin-right: 40px;margin-top: 20px">
     <!--修改人-->
     <input hidden th:value="${session.username}" name="updateBy">
     <div class="layui-form-item">
@@ -117,7 +118,7 @@
 </form>
 <!--行工具栏-->
 <script type="text/html" id="barDemo" lay-event="tool">
-    <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="register">业务登记</a>
+    <a class="layui-btn layui-btn-xs layui-btn-normal" lay-event="register">业务登记</a>
     <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
 </script>
 <!--查询表单-->
@@ -143,7 +144,7 @@
     <div class="layui-inline">
         <div class="layui-input-inline">
             <button class="layui-btn" lay-submit lay-filter="selectFormfilter">查询</button>
-            <button type="reset" class="layui-btn layui-btn-primary"  id="myButton" >重置</button>
+            <button type="reset" class="layui-btn layui-btn-primary" id="myButton">重置</button>
         </div>
     </div>
 </form>
@@ -168,19 +169,20 @@
             , limits: [5, 10, 15, 20, 25, 30]
             , cols: [
                 [ //表头
-                    {field: 'customId', title: '客户ID',align: 'center', sort: true}
-                    , {field: 'contact', title: '联系人姓名',align: 'center'}
-                    , {field: 'phone', title: '手机号', align: 'center'}
-                    , {field: 'applicant', title: '申请人', align: 'center'}
-                    , {field: 'customAddress', title: '邮寄地址', align: 'center'}
-                    , {field: 'createBy', title: '创建人', align: 'center'}
-                    , {field: 'createTime', title: '创建时间', align: 'center'}
-                    , {field: 'updateBy', title: '修改人', align: 'center'}
-                    , {field: 'updateTime', title: '修改时间', align: 'center'}
-                    , {field: 'proxyId', title: '代理人ID', align: 'center'}
-                    , {field: 'remark', title: '备注', align: 'center'}
-                    , {fixed: 'right', title: '操作', toolbar: '#barDemo', align: 'center'}
-                ]]
+                    {field: 'customId', title: '客户ID', align: 'center', sort: true, width: 90}
+                    , {field: 'contact', title: '联系人姓名', align: 'center', width: 120}
+                    , {field: 'phone', title: '手机号', align: 'center', width: 140}
+                    , {field: 'applicant', title: '申请人', align: 'center', width: 120}
+                    , {field: 'customAddress', title: '邮寄地址', align: 'center', width: 120}
+                    , {field: 'createBy', title: '创建人', align: 'center', width: 120}
+                    , {field: 'createTime', title: '创建时间', align: 'center', width: 160}
+                    , {field: 'updateBy', title: '修改人', align: 'center', width: 120}
+                    , {field: 'updateTime', title: '修改时间', align: 'center', width: 160}
+                    , {field: 'proxyId', title: '代理人ID', align: 'center', width: 120}
+                    , {field: 'remark', title: '备注', align: 'center', width: 120}
+                    , {fixed: 'right', align: 'center', title: '操作', toolbar: '#barDemo', width: 140}
+                ]
+            ]
         });
 
         //监听头部工具栏事件
@@ -289,11 +291,11 @@
             myTable.reload({
                 where: { //设定异步数据接口的额外参数，任意设
                     customId: data.field.customId
-                    ,contact: data.field.contact
-                    ,phone: data.field.phone
+                    , contact: data.field.contact
+                    , phone: data.field.phone
                     //…
                 }
-                ,page: {
+                , page: {
                     curr: 1 //重新从第 1 页开始
                 }
             });
@@ -305,11 +307,11 @@
             myTable.reload({
                 where: { //设定异步数据接口的额外参数，任意设
                     customId: ""
-                    ,contact: ""
-                    ,phone: ""
+                    , contact: ""
+                    , phone: ""
                     //…
                 }
-                ,page: {
+                , page: {
                     curr: 1 //重新从第 1 页开始
                 }
             });
