--- a/src/main/resources/templates/dept.html
+++ b/src/main/resources/templates/dept.html
@@ -21,7 +21,7 @@
     <div class="layui-form-item">
         <label class="layui-form-label">排序</label>
         <div class="layui-input-block">
-            <input type="text" name="orderNum" autocomplete="off" placeholder="请输入排序"
+            <input type="number" name="orderNum" autocomplete="off" placeholder="请输入排序"
                    class="layui-input">
         </div>
     </div>
@@ -66,7 +66,7 @@
     <div class="layui-form-item">
         <label class="layui-form-label">排序</label>
         <div class="layui-input-block">
-            <input type="text" name="orderNum" autocomplete="off" placeholder="请输入排序"
+            <input type="number" name="orderNum" autocomplete="off" placeholder="请输入排序"
                    class="layui-input">
         </div>
     </div>
@@ -227,32 +227,28 @@
                 data.field.status = 1;
             }
             //提交表单数据
-            if (!isNaN(data.field.orderNum)) {
-                $.ajax({
-                    url: "/dept/updateDept",
-                    type: "PUT",
-                    dataType: "JSON",
-                    data: data.field,
-                    success: function (ret) {
-                        if (ret.code == 0) {
-                            //关闭对话框
-                            layer.closeAll();
-                            //刷新表格数据
-                            deptTable.reload({
-                                page: {
-                                    curr: 1 //重新从第 1 页开始
-                                }
-                            });
-                            layer.msg(ret.msg, {icon: 6});
-                        } else {
-                            layer.msg(ret.msg, {icon: 5});
-                        }
-
+            $.ajax({
+                url: "/dept/updateDept",
+                type: "PUT",
+                dataType: "JSON",
+                data: data.field,
+                success: function (ret) {
+                    if (ret.code == 0) {
+                        //关闭对话框
+                        layer.closeAll();
+                        //刷新表格数据
+                        deptTable.reload({
+                            page: {
+                                curr: 1 //重新从第 1 页开始
+                            }
+                        });
+                        layer.msg(ret.msg, {icon: 6});
+                    } else {
+                        layer.msg(ret.msg, {icon: 5});
                     }
-                })
-            } else {
-                layer.msg("排序只能为数字！")
-            }
+
+                }
+            })
             return false; //阻止表单跳转。如果需要表单跳转，去掉这段即可。
         });
 
