--- a/src/main/resources/templates/role.html
+++ b/src/main/resources/templates/role.html
@@ -42,7 +42,7 @@
     <div class="layui-form-item">
         <label class="layui-form-label">排序</label>
         <div class="layui-input-block">
-            <input type="text" name="roleSort" placeholder="请输入排序" required lay-verify="required" autocomplete="off"
+            <input type="number" name="roleSort" placeholder="请输入排序" required lay-verify="required" autocomplete="off"
                    class="layui-input">
         </div>
     </div>
@@ -97,7 +97,7 @@
     <div class="layui-form-item">
         <label class="layui-form-label">排序</label>
         <div class="layui-input-block">
-            <input type="text" name="roleSort" placeholder="请输入排序" required lay-verify="required" autocomplete="off"
+            <input type="number" name="roleSort" placeholder="请输入排序" required lay-verify="required" autocomplete="off"
                    class="layui-input">
         </div>
     </div>
@@ -285,32 +285,28 @@
             } else {
                 data.field.status = 1;
             }
-            if (!isNaN(data.field.roleSort)) {
-                //提交表单数据
-                $.ajax({
-                    url: "/role/insertRole",
-                    type: "POST",
-                    dataType: "JSON",
-                    data: data.field,
-                    success: function (ret) {
-                        if (ret.code == 0) {
-                            //关闭对话框
-                            layer.closeAll();
-                            //刷新表格数据
-                            roleTable.reload({
-                                page: {
-                                    curr: 1 //重新从第 1 页开始
-                                }
-                            });
-                            layer.msg(ret.msg, {icon: 6});
-                        } else {
-                            layer.msg(ret.msg, {icon: 5});
-                        }
+            //提交表单数据
+            $.ajax({
+                url: "/role/insertRole",
+                type: "POST",
+                dataType: "JSON",
+                data: data.field,
+                success: function (ret) {
+                    if (ret.code == 0) {
+                        //关闭对话框
+                        layer.closeAll();
+                        //刷新表格数据
+                        roleTable.reload({
+                            page: {
+                                curr: 1 //重新从第 1 页开始
+                            }
+                        });
+                        layer.msg(ret.msg, {icon: 6});
+                    } else {
+                        layer.msg(ret.msg, {icon: 5});
                     }
-                })
-            } else {
-                layer.msg("排序只能为数字！")
-            }
+                }
+            })
             //将表单清空
             document.getElementById("addRoleForm").reset();
             return false; //阻止表单跳转。如果需要表单跳转，去掉这段即可。
@@ -329,28 +325,24 @@
                 } else {
                     data.field.status = 1;
                 }
-                if (!isNaN(data.field.roleSort)) {
-                    //提交表单数据
-                    $.ajax({
-                        url: "/role/updateRole",
-                        type: "PUT",
-                        dataType: "JSON",
-                        data: data.field,
-                        success: function (ret) {
-                            if (ret.code == 0) {
-                                //关闭对话框
-                                layer.closeAll();
-                                //刷新表格数据
-                                roleTable.reload({});
-                                layer.msg(ret.msg, {icon: 6});
-                            } else {
-                                layer.msg(ret.msg, {icon: 5});
-                            }
+                //提交表单数据
+                $.ajax({
+                    url: "/role/updateRole",
+                    type: "PUT",
+                    dataType: "JSON",
+                    data: data.field,
+                    success: function (ret) {
+                        if (ret.code == 0) {
+                            //关闭对话框
+                            layer.closeAll();
+                            //刷新表格数据
+                            roleTable.reload({});
+                            layer.msg(ret.msg, {icon: 6});
+                        } else {
+                            layer.msg(ret.msg, {icon: 5});
                         }
-                    })
-                } else {
-                    layer.msg("排序只能为数字！")
-                }
+                    }
+                })
                 //将表单清空
                 document.getElementById("updateRoleForm").reset();
                 return false; //阻止表单跳转。如果需要表单跳转，去掉这段即可。
