--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -56,14 +56,14 @@
     <div class="layui-form-item">
         <label class="layui-form-label">邮箱</label>
         <div class="layui-input-block">
-            <input type="text" name="email" placeholder="请输入邮箱" required lay-verify="required" autocomplete="off"
+            <input type="email" name="email" placeholder="请输入邮箱" required lay-verify="required" autocomplete="off"
                    class="layui-input">
         </div>
     </div>
     <div class="layui-form-item">
         <label class="layui-form-label">手机号</label>
         <div class="layui-input-block">
-            <input type="text" name="phonenumber" placeholder="请输入手机号" required lay-verify="required" autocomplete="off"
+            <input type="tel" name="phonenumber" placeholder="请输入手机号" required lay-verify="required" autocomplete="off"
                    class="layui-input">
         </div>
     </div>
@@ -124,14 +124,14 @@
     <div class="layui-form-item">
         <label class="layui-form-label">邮箱</label>
         <div class="layui-input-block">
-            <input type="text" name="email" placeholder="请输入邮箱" required lay-verify="required" autocomplete="off"
+            <input type="email" name="email" placeholder="请输入邮箱" required lay-verify="required" autocomplete="off"
                    class="layui-input">
         </div>
     </div>
     <div class="layui-form-item">
         <label class="layui-form-label">手机号</label>
         <div class="layui-input-block">
-            <input type="text" name="phonenumber" placeholder="请输入手机号" required lay-verify="required" autocomplete="off"
+            <input type="tel" name="phonenumber" placeholder="请输入手机号" required lay-verify="required" autocomplete="off"
                    class="layui-input">
         </div>
     </div>
